--- a/about_us.html
+++ b/about_us.html
@@ -8,13 +8,13 @@
   <!-- Bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- CSS link  --> 
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="css/about.css">
 
   <!--Bootstrap icons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <!-- Favicon Link -->
-  <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.jpg"/>
 
 </head>
 <body>
@@ -88,7 +88,7 @@
       <img 
         id="off0"
         class = "headshots rounded-circle img-fluid image" 
-        src="headshots/betski.jpg" 
+        src="imgs/aboutImgs/headshots/betina.jpg" 
         alt="Betina Kreiman">
       <div class="overlay">
         <div class="text">Betina Kreiman</div>
@@ -106,9 +106,6 @@
         <a href="mailto:betina1620@gmail.com">
           <i class="bi bi-envelope p-1"></i>
         </a>
-        <a href="sms:+1(617)806-6503">
-          <i class="bi bi-chat-text-fill p-1"></i>
-        </a>
     </div>
   </div>
   <!-- col-xs-12 col-md-6 col-lg-3 -->
@@ -119,7 +116,7 @@
       <img 
         id="off1"
         class = "headshots rounded-circle img-fluid image" 
-        src="headshots/jennifer.jpg" 
+        src="imgs/aboutImgs/headshots/jennifer.jpg" 
         alt="Jennifer Li">
       <div class="overlay">
         <div class="text">Jennifer Li</div>
@@ -129,15 +126,9 @@
     <!--Jen Contact-->
     <p class="names">Jennifer Li</p>
     <div class="social_icon">
-      <a href="https://www.instagram.com/jennifer.yli/?hl=en">
-        <i class="bi bi-instagram fa-2x p-1"></i>
-      </a> 
       <a href="mailto:jennifer.yuzhen.li@gmail.com">
         <i class="bi bi-envelope p-1"></i>
       </a> 
-      <a href="sms:+(1617)631-0590">
-        <i class="bi bi-chat-text-fill p-1"></i>
-      </a>
     </div>
   </div>
 
@@ -149,7 +140,7 @@
         <img 
           id="off2"
           class = "headshots rounded-circle img-fluid image" 
-          src="headshots/angelaTwo.jpg" 
+          src="imgs/aboutImgs/headshots/angelaTwo.jpg" 
           alt="Angela Bai">
         <!--Overlay Hover-->
         <div class="overlay">
@@ -181,7 +172,7 @@
       <img 
         id="off3"
         class = "headshots rounded-circle img-fluid image" 
-        src="headshots/adam.jpg" 
+        src="imgs/aboutImgs/headshots/adam.jpg" 
         alt="Mr.Peloquin">
       <div class="overlay">
         <div class="text">Mr.Peloquin</div>
@@ -276,7 +267,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="about.js"></script>
+  <script src="js/about.js"></script>
   
 </body>
 </html>
