--- a/faq.html
+++ b/faq.html
@@ -7,10 +7,10 @@
 
   <!-- boostrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="faq.css">
+    <link rel="stylesheet" href="css/faq.css">
 
     <!-- Favicon Link -->
-    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.jpg"/>
 
 </head>
 <body>
