--- a/fundraising.html
+++ b/fundraising.html
@@ -7,10 +7,10 @@
 
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="fundraising.css" rel="stylesheet" type="text/css" />
+    <link href="css/fundraising.css" rel="stylesheet" type="text/css" />
 
     <!-- Favicon Link -->
-    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.jpg"/>
 
 </head>
 <body>
@@ -47,27 +47,24 @@
   </div>
   <div class="WhyFundraising p-4">
     <h5 class="text-center">Why fundraising?</h5>
-    <p class="text-center">The club needs money to buy a domain for this website, donate to charities, get new equipment for projects, perchase domains for other websites, snacks, and club merch. Any donation is greatly appreciated!</p>
+    <p class="text-center fundraising_text">The club needs money to buy a domain for this website, donate to charities, get new equipment for projects, perchase domains for other websites, snacks, and club merch. Any donation is greatly appreciated!</p>
   </div>
 
-  <br></br>
-  
-  <div class="previousProjects ">
-    <div class="container">
-         <h4><u>Previous Fundraisers</u></h4>
+
+  <div>
+    <div>
+      <h1 class="sponsors_heading">Our Sponsors</h1>
     </div>
 
-    <div class="bakeSale2021">
-      
-    <center><p class=" bakeSale">Bake Sale!</p></center>
-
-      <div class="row">
-        <img class="fundraiser_img container col-md-6 col-s-12" src="imgs/flyer2.jpeg" alt="">
-        <img class="fundraiser_img container col-md-6 col-s-12" src="imgs/bakeSaleFlyer.jpg" alt="">
-      </div>
+    <div class="EMPOW">
+      <img class="flyer" src="imgs/fundraisingImgs/sponsor.jpg" alt="">
     </div>
+
+    <p class="text">
+        <a href="https://empow.me/">Empow Studios</a> is a STEM education provider in the Greater Boston area. They have many opportunities for high school students such as counselor in training programs in the summer, employment opportunities during the school year, and employment opportunities during the summer! Interested? Fill out this 
+        <a href="http://bit.ly/EmpowJrInst!">form!</a>
+      </p>
   </div>
-  
 
  
 
