--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- CSS link-->
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <!--Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <!--Favicon Link-->
-    <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.jpg"/>
 
     <title>NNHS Programming Club</title>
   </head>
@@ -53,10 +53,10 @@
   <header class="header" id="header">
 		<div class="text-box float-center">
 			<h1 class="header-primary align-items-stretch">
-				<img class="logo-img" src="imgs/progclubLogo.png" alt="Club Logo">
+				<img class="logo-img" src="imgs/mainImgs/progclubLogo.png" alt="Club Logo">
 				<span class="header-primary-main">NNHS Programming Club</span>
-        <span class="header-primary-sub">Mondays after school 4-5!</span>
-        <span class="header-primary-sub">ROOM 468</span>
+        <span class="header-primary-sub">Fridays during WIN</span>
+        <span class="header-primary-sub">ROOM 468 with Mr.Peloquin</span>
         <span class="header-primary-sub">No experience needed! Drop by anytime!</span>
 
         <!--CLUB CONTACT-->
@@ -85,22 +85,22 @@
   <div class="gallery container-fluid">
     <div class="row">
       <div class="column container">
-        <img src="imgs/stepUpDay.jpg" alt="">
-        <img src="imgs/toby.jpg" alt="">
-        <img src="imgs/veer.jpg" alt="">
+        <img src="imgs/mainImgs/stepUpDay.jpg" alt="">
+        <img src="imgs/mainImgs/toby.jpg" alt="">
+        <img src="imgs/mainImgs/veer.jpg" alt="">
       </div>
       <div class="column container">
-        <img class = "border"src="imgs/computerLogo.jpg" alt="">
-        <img src="imgs/tigerLogo.jpg" alt="">
-        <img src="imgs/newspaper.jpg" alt="">
-        <img src="imgs/computer2.jpg" alt="">
+        <img class = "border"src="imgs/mainImgs/computerLogo.jpg" alt="">
+        <img src="imgs/mainImgs/tigerLogo.jpg" alt="">
+        <img src="imgs/mainImgs/newspaper.jpg" alt="">
+        <img src="imgs/mainImgs/computer2.jpg" alt="">
       </div>
       <div class="column container">
-        <img src="imgs/zoom.jpg" alt="">
-        <img src="imgs/poster.jpg" alt="">
-        <img class = "border" src="imgs/tiger.png" alt="">
-        <img class = "border" src="imgs/fontClub.png" alt="">
-        <img class = "border" src="imgs/logosamples.png" alt="">
+        <img src="imgs/mainImgs/zoom.jpg" alt="">
+        <img src="imgs/mainImgs/poster.jpg" alt="">
+        <img class = "border" src="imgs/mainImgs/tiger.png" alt="">
+        <img class = "border" src="imgs/mainImgs/fontClub.png" alt="">
+        <img class = "border" src="imgs/mainImgs/logosamples.png" alt="">
 
       </div>
     </div>
@@ -109,7 +109,7 @@
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-      <script src="script.js"></script>
+      <script src="js/script.js"></script>
   </body>
 </html>
 
