--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 
   <!-- boostrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="css/test.css">
 
     <!-- Favicon Link -->
     <link rel="shortcut icon" type="image/jpg" href="imgs/a.jpg"/>
@@ -58,7 +58,7 @@
         <a href="https://apps.apple.com/us/app/orbit-a-space-game/id1353390547">Orbit App</a>
       </div>
       <div>
-        <img src="imgs/orbit2.jpg" class="project-img" style="">
+        <img src="imgs/archiveImgs/orbit2.jpg" class="project-img" style="">
         A neat scroller app game to play when class gets boring. We used swift/xcode and even made the music with garage band. It's now relased in the app store!
       </div>
     </div>
@@ -67,15 +67,15 @@
       <div class="project-header">
         <a href="https://apps.apple.com/us/app/north-parking/id1439643706">North Parking Availability App</a>
       </div>
-      <img src="imgs/northParking.jpg" class="project-img north_parking" style="">
+      <img src="imgs/archiveImgs/northParking.jpg" class="project-img north_parking" style="">
       The Newton North Parking Availability App is a great way for students to find parking around the school. Most kids with their license are aware of the chaos and disorder there is around North when trying to find parking. The app is a great way to locate parking easily and quickly.
     </div>
 
     <div class="frenchsite pb-3">
       <div class="project-header">
-        French Club Website
+        <a href="https://nnhsfrenchclub.com" target="_blank">French Club Website</a>
       </div>
-      <img src="imgs/french.jpg" class="project-img" style="">
+      <img src="imgs/archiveImgs/french.jpg" class="project-img" style="">
       The French Club is another club at North that the Programming Club made a site for! We used Bootstrap and brilliant thinking to artistically craft a pleasing and visually appealing site that greatly benefits the French Club. Au revoir!
     </div>
 
@@ -83,7 +83,7 @@
       <div class="project-header">
         2048 Python
       </div>
-      <img src="imgs/2048.jpg" class="project-img" style="">
+      <img src="imgs/archiveImgs/2048.jpg" class="project-img" style="">
       One of our club members was inspired by the classic 2048 game that so many people play during class. They recreated the game using python and user input. It's a fun and entertaining way to spend class and is really cool because he made it himself. Demo of game coming soon!
     </div>
 
@@ -98,7 +98,7 @@
       <div class="project-header">
         Podtalk App
       </div>
-      <img src="imgs/podtalk.png" class="project-img" style="">
+      <img src="imgs/archiveImgs/podtalk.png" class="project-img" style="">
       A poscast app for ios. They also had merch for sale to advertise for the club! Was published on app store and was a huge hit!
     </div>
 
@@ -106,7 +106,7 @@
       <div class="project-header">
         3D OOP Lua game
       </div>
-      <img src="imgs/luaGame.jpg" class="project-img" style="">
+      <img src="imgs/archiveImgs/luaGame.jpg" class="project-img" style="">
       It's an action combat multiplayer fighting game. We used an object-oriented version of Lua and blender. The physics engine used was roblox studio. We took trigonometry we learned in class and applied it to the game's 3D space. The game is now released on the roblox platform. Over the course of the 9 month development period we hired various gfx artists and 3D modelers online to create art assets.
     </div>
 
@@ -114,7 +114,7 @@
       <div class="project-header">
         Website for TigerInsider
       </div>
-      <img src="imgs/tigerInsider.jpg" class="project-img" style="">
+      <img src="imgs/archiveImgs/tigerInsider.jpg" class="project-img" style="">
       The Tiger Insider website uses the bootstrap CSS framework and silverstripe PHP for the backend. The club created some graphics to slap on the website and hired a gfx artist online to create an article placeholder banner. We like to use our own code, so bootstrap CSS was the optimal way in efficiency and creativity.
     </div>
 
@@ -126,6 +126,10 @@
     </div>
   </div>
 
+<!--   <div class="test_animation">
+    <img src="https://images.unsplash.com/photo-1466695108335-44674aa2058b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80" alt="" style="width: 20%">
+  </div> -->
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -133,6 +137,8 @@
   </script>
   <!--gsap thing-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   <script src="test.js"></script>
 
 </body>
