added opportunities page and animations with it

--- a/faq.html
+++ b/faq.html
@@ -34,7 +34,7 @@
               <a class="nav-link text-dark" href="faq.html"> FAQ </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="fundraising.html"> Fundraising </a>
+              <a class="nav-link" href="opportunities.html"> Opportunities </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about_us.html"> About Us </a>
@@ -47,7 +47,7 @@
     <div class="question1 p-4">
       
       <h5>When do we meet?</h5>
-      <p>Mondays from 4-5 in room 468</p>
+      <p>Fridays during WIN in room 468 (teacher is Mr.Peloquin)</p>
 
       <h5>Who is the advisor?</h5>
       <p>Mr.Peloquin (He teaches math at North)</p>
@@ -60,6 +60,9 @@
 
       <h5>What happens if I already know how to code?</h5>
       <p>That’s great! We would love to have you in the club, we will work on lots of different projects and you can help us to work on the harder parts. This can also be a space to work on your personal projects and talk them through with others.</p>
+
+      <h5>Do you know of any cool coding opportunities for me?</h5>
+      <p>Yes! Check out our opportunities page with tons of different coding programs!</p>
 
       <h5>Want to join!</h5>
       <p>We'll add you to the email
