--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="faq.html"> FAQ </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="fundraising.html">Fundraising </a>
+          <a class="nav-link" href="opportunities.html"> Opportunities </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about_us.html"> About Us </a>
