added animations to archive, added link clicking to resources

--- a/resources.html
+++ b/resources.html
@@ -53,10 +53,11 @@
 
   <div class="collection">
   <!-- repl -->
-    <div 
+    <div
       class="resource repl container resource_link_1_rep" 
       onmouseover ="hover_resource(1)" 
-      onmouseout ="stop_hover(1)">
+      onmouseout ="stop_hover(1)"
+      onclick = "click_resource(1)">
       <center>
         <img src="imgs/resourceImgs/repl.jpg" alt="" class="image">                   </center>
     <div>
@@ -88,7 +89,8 @@
     <div 
       class="resource euler container "
       onmouseover="hover_resource(2)"
-      onmouseout="stop_hover(2)">
+      onmouseout="stop_hover(2)"
+      onclick = "click_resource(2)">
       <center>
         <img src="imgs/resourceImgs/euler.jpg" alt="" class="image">
       </center>
@@ -113,7 +115,8 @@
     <!-- leetcode -->
     <div class="resource leetcode container "
     onmouseover="hover_resource(3)"
-    onmouseout="stop_hover(3)">
+    onmouseout="stop_hover(3)"
+    onclick = "click_resource(3)">
       <center>
         <img src="imgs/resourceImgs/leetcode.jpg" alt="" class="image">
       </center>
@@ -134,7 +137,8 @@
     <!-- Python courses -->
     <div class="resource pythonCourses container"
     onmouseover="hover_resource(4)"
-    onmouseout="stop_hover(4)">
+    onmouseout="stop_hover(4)"
+    onclick = "click_resource(4)">
       <center><img src="imgs/resourceImgs/python.jpg" alt="" class="image"></center>
       <div>
         <a 
@@ -153,7 +157,8 @@
     <!-- Swift courses -->
     <div class="resource swiftCourses container "
     onmouseover="hover_resource(5)"
-    onmouseout="stop_hover(5)">
+    onmouseout="stop_hover(5)"
+    onclick = "click_resource(5)">
       <center><img src="imgs/resourceImgs/swift2.jpg" alt="" class="image"></center>
       <div>
         <a 
@@ -172,7 +177,8 @@
     <!-- HTMl courses -->
     <div class="resource htmlCourses container"
     onmouseover="hover_resource(6)"
-    onmouseout="stop_hover(6)">
+    onmouseout="stop_hover(6)"
+    onclick = "click_resource(6)">
       <center><img src="imgs/resourceImgs/w3school.jpg" alt="" class="image"></center>
       <div>
         <a href="https://www.w3schools.com/html/default.asp"
@@ -190,7 +196,8 @@
     <!-- North Website -->
     <div class="resource northSite container"
     onmouseover="hover_resource(7)"
-    onmouseout="stop_hover(7)">
+    onmouseout="stop_hover(7)"
+    onclick = "click_resource(7)">
       <center><img src="imgs/resourceImgs/nps.jpg" alt="" class="image"></center>
       <div>
         <a 
@@ -209,7 +216,8 @@
     <!-- github -->
     <div class="resource github container"
     onmouseover="hover_resource(8)"
-    onmouseout="stop_hover(8)">
+    onmouseout="stop_hover(8)"
+    onclick = "click_resource(8)">
       <center><img src="imgs/resourceImgs/github.jpg" alt="" class="image"></center>
       <div>
         <a href="https://github.com/"
@@ -227,7 +235,8 @@
     <!-- codewars -->
     <div class="resource codewars container"
     onmouseover="hover_resource(9)"
-    onmouseout="stop_hover(9)">
+    onmouseout="stop_hover(9)"
+    onclick = "click_resource(9)">
       <center><img src="imgs/resourceImgs/codewars.jpg" alt="" class="image"></center>
       <div>
         <a href="https://codewars.com/dashboard"
@@ -245,7 +254,8 @@
     <!-- Newton Hacks Website -->
     <div class="resource newtonHack container"
     onmouseover="hover_resource(10)"
-    onmouseout="stop_hover(10)">
+    onmouseout="stop_hover(10)"
+    onclick = "click_resource(10)">
       <center><img src="imgs/resourceImgs/hacks.jpg" alt="" class="image"></center>
       <div>
         <a href="https://nnhshacks.tech/"
@@ -263,7 +273,8 @@
     <!-- discord -->
     <div class="resource discord container "
     onmouseover="hover_resource(11)"
-    onmouseout="stop_hover(11)">
+    onmouseout="stop_hover(11)"
+    onclick = "click_resource(11)">
       <center><img src="imgs/resourceImgs/discord.jpg" alt="" class="image"></center>
       <div>
         <a href="https://discord.gg/dZ4RVNRQEm/"
@@ -281,7 +292,8 @@
     <!-- codingground -->
     <div class="resource codingGround container "
     onmouseover="hover_resource(12)"
-    onmouseout="stop_hover(12)">
+    onmouseout="stop_hover(12)"
+    onclick = "click_resource(12)">
       <center><img src="imgs/resourceImgs/ground.jpg" alt="" class="image"></center>
       <div>
         <a href="https://www.tutorialspoint.com/execute_python_online.php"
