--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </nav> 
 
-      <!-- a href="test.html">test.html</a> -->
+<!--       <a href="test.html">test.html</a> -->
  
   <header class="header" id="header">
 		<div class="text-box float-center">
@@ -74,7 +74,6 @@
 			</h1>
 		</div>
 	</header>
-
 	<div class="behind-header"></div>
 
 
