new meeting time and added photography club site

--- a/archive.html
+++ b/archive.html
@@ -79,7 +79,15 @@
       The French Club is another club at North that the Programming Club made a site for! We used Bootstrap and brilliant thinking to artistically craft a pleasing and visually appealing site that greatly benefits the French Club. Au revoir!
     </div>
 
-    <div class="game project2 pb-3">
+    <div class="photographysite project2 pb-3">
+      <div class="project-header">
+        <a href="https://betinakreiman.github.io/photographyClubWebsite/" target="_blank">Photography Club Website</a>
+      </div>
+      <img src="imgs/archiveImgs/photography.jpg" class="project-img" style="">      The cinematic and innovative design applied to this high-end website was created after long nights of debugging and frustration. Intentionally articulated to display the first-rate creation of our dear partners, the Newton North High School Photography Club, this site provides our audience with a memorable experience, which is once in a lifetime. Using bootstrap and hard work, the Programming Club put together another beautiful website. We hope you thoroughly enjoy! 
+      
+    </div>
+
+    <div class="game project1 pb-3">
       <div class="project-header">
         2048 Python
       </div>
@@ -87,14 +95,14 @@
       One of our club members was inspired by the classic 2048 game that so many people play during class. They recreated the game using python and user input. It's a fun and entertaining way to spend class and is really cool because he made it himself. Demo of game coming soon!
     </div>
 
-    <div class="oldWebsite project1 pb-3">
+    <div class="oldWebsite project2 pb-3">
       <div class="project-header">
         <a href="https://nnhsprogramming.github.io/">Old Club Website</a>
       </div>
       After the pandemic, the club decided it wanted to entirely redo the website (taking ideas from the old website). We completely redid it trying to add the most useful information possible while still making it cool and modern.
     </div>
 
-    <div class="podtalk project2 pb-3">
+    <div class="podtalk project1 pb-3">
       <div class="project-header">
         Podtalk App
       </div>
@@ -102,7 +110,7 @@
       A poscast app for ios. They also had merch for sale to advertise for the club! Was published on app store and was a huge hit!
     </div>
 
-    <div class="luaGame project1 pb-3">
+    <div class="luaGame project2 pb-3">
       <div class="project-header">
         3D OOP Lua game
       </div>
@@ -110,7 +118,7 @@
       It's an action combat multiplayer fighting game. We used an object-oriented version of Lua and blender. The physics engine used was roblox studio. We took trigonometry we learned in class and applied it to the game's 3D space. The game is now released on the roblox platform. Over the course of the 9 month development period we hired various gfx artists and 3D modelers online to create art assets.
     </div>
 
-    <div class="tigerInsider project2 pb-3">
+    <div class="tigerInsider project1 pb-3">
       <div class="project-header">
         Website for TigerInsider
       </div>
@@ -118,7 +126,7 @@
       The Tiger Insider website uses the bootstrap CSS framework and silverstripe PHP for the backend. The club created some graphics to slap on the website and hired a gfx artist online to create an article placeholder banner. We like to use our own code, so bootstrap CSS was the optimal way in efficiency and creativity.
     </div>
 
-    <div class="dreamherSite project1 pb-3">
+    <div class="dreamherSite project2 pb-3">
       <div class="project-header">
         Dreamher Charity Website
       </div>
