--- a/faq.html
+++ b/faq.html
@@ -47,7 +47,7 @@
     <div class="question1 p-4">
       
       <h5>When do we meet?</h5>
-      <p>Fridays during WIN in room 468 (teacher is Mr.Peloquin)</p>
+      <p>Mondays after school in room 369!</p>
 
       <h5>Who is the advisor?</h5>
       <p>Mr.Peloquin (He teaches math at North)</p>
