--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 			<h1 class="header-primary align-items-stretch">
 				<img class="logo-img" src="imgs/mainImgs/progclubLogo.png" alt="Club Logo">
 				<span class="header-primary-main">NNHS Programming Club</span>
-        <span class="header-primary-sub">Fridays during WIN</span>
-        <span class="header-primary-sub">ROOM 468 with Mr.Peloquin</span>
+        <span class="header-primary-sub">Mondays after school!</span>
+        <span class="header-primary-sub">First Meeting 9/19! BE THERE. </span>
+        <span class="header-primary-sub">ROOM 369 with Mr.Peloquin</span>
         <span class="header-primary-sub">No experience needed! Drop by anytime!</span>
 
         <!--CLUB CONTACT-->
