added sustainability site to archive

--- a/archive.html
+++ b/archive.html
@@ -71,7 +71,15 @@
       The Newton North Parking Availability App is a great way for students to find parking around the school. Most kids with their license are aware of the chaos and disorder there is around North when trying to find parking. The app is a great way to locate parking easily and quickly.
     </div>
 
-    <div class="frenchsite project1 pb-3">
+    <div class="sustainablitySite project1 pb-3">
+      <div class="project-header">
+        <a href="https://sustainabilityinschool.com" target="_blank">Sustainability Club Website</a>
+      </div>
+      <img src="imgs/archiveImgs/Sustainability.png" class="project-img" style="">
+      The Newton North Sustainability Club is another group of wonderful humans that received a marvelous website from us. We strategically and mathematically calculated the rgb values of the colors on this site to complement the authentic design made by the sustainable dev. team. With forms that actually work and padding that pleases the eye, a smile is guaranteed to come to your face when you visit this website. Enjoy and be sustainable!
+    </div> 
+
+    <div class="frenchsite project2 pb-3">
       <div class="project-header">
         <a href="https://nnhsfrenchclub.com" target="_blank">French Club Website</a>
       </div>
@@ -79,7 +87,7 @@
       The French Club is another club at North that the Programming Club made a site for! We used Bootstrap and brilliant thinking to artistically craft a pleasing and visually appealing site that greatly benefits the French Club. Au revoir!
     </div>
 
-    <div class="photographysite project2 pb-3">
+    <div class="photographysite project3 pb-3">
       <div class="project-header">
         <a href="https://betinakreiman.github.io/photographyClubWebsite/" target="_blank">Photography Club Website</a>
       </div>
