--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <p class="">Mondays after school!!<br>Room 464 with Mr.Peloquin<br>No experience needed! Drop by anytime!
       </p>
-      <!-- <p class="info"> Mondays after school. Room 464. No experience needed. Drop by anytime!</p> -->
+      <!-- <p class="info"> Mondays after school. Room 464 No experience needed. Drop by anytime!</p> -->
     </div>
   </div>
 
