--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -174,7 +174,7 @@
       </div>
     </div>
 
-    <div class="officerCard">
+    <!-- <div class="officerCard">
       <div class="popUp" id="popUp" onclick="officerClick(3)">
         <div class="officerImg">
           <img class="officerHeadshot" onclick(officerClick(3)) id="isabelle" src="imgs/meet_the_team/isabelle.jpg"
@@ -194,7 +194,7 @@
         <a href="mailto:isabelleosloan@gmail.com" target=”_blank”><i
             class="icon_officer fa-regular fa-envelope"></i></a>
       </div>
-    </div>
+    </div> -->
 
     <div class="officerCard ">
       <div class="popUp" id="popUp" onclick="officerClick(4)">
@@ -266,6 +266,8 @@
     <button id="btn18" type="button" class="btn btn-outline-secondary" onclick="memberClick(18)">Name</button>
     <button id="btn19" type="button" class="btn btn-outline-secondary" onclick="memberClick(19)">Name</button>
     <button id="btn20" type="button" class="btn btn-outline-secondary" onclick="memberClick(20)">Name</button>
+    <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="memberClick(21)">Name</button>
+    <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="memberClick(22)">Name</button>
     <!-- <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="memberClick(21)">Name</button>
     <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="memberClick(22)">Name</button> -->
   </div>
