--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -268,6 +268,13 @@
     <button id="btn20" type="button" class="btn btn-outline-secondary" onclick="memberClick(20)">Name</button>
     <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="memberClick(21)">Name</button>
     <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="memberClick(22)">Name</button>
+    <button id="btn23" type="button" class="btn btn-outline-secondary" onclick="memberClick(23)">Name</button>
+    <button id="btn24" type="button" class="btn btn-outline-secondary" onclick="memberClick(24)">Name</button>
+    <button id="btn25" type="button" class="btn btn-outline-secondary" onclick="memberClick(25)">Name</button>
+    <button id="btn26" type="button" class="btn btn-outline-secondary" onclick="memberClick(26)">Name</button>
+    <button id="btn27" type="button" class="btn btn-outline-secondary" onclick="memberClick(27)">Name</button>
+    <button id="btn28" type="button" class="btn btn-outline-secondary" onclick="memberClick(28)">Name</button>
+    <!-- <button id="btn29" type="button" class="btn btn-outline-secondary" onclick="memberClick(29)">Name</button> -->
     <!-- <button id="btn21" type="button" class="btn btn-outline-secondary" onclick="memberClick(21)">Name</button>
     <button id="btn22" type="button" class="btn btn-outline-secondary" onclick="memberClick(22)">Name</button> -->
   </div>
